Move audit user event reads off legacy SPI